chore(): add get profile import details endpoint
